--- a/index.html
+++ b/index.html
@@ -1,12 +1,198 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="es">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title>title</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <!-- <script src="script.js"></script> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+
+    <title>Jor & Ari</title>
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
-    <!-- page content -->
+    <main role="main">
+      <div class="hero-image">
+        <div class="hero-text">
+          <p>Lista de casamiento</p>
+          <h1>Jor & Ari</h1>
+          <p>Luna de Miel</p>
+        </div>
+      </div>
+      <div class="album py-5">
+        <div class="container">
+
+          <div class="row">
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </main>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
