--- a/index.html
+++ b/index.html
@@ -15,19 +15,24 @@
   <body>
     <main role="main">
       <div class="hero-image">
-        <div class="hero-text">
-          <p>Lista de casamiento</p>
+        <div class="hero-text hero-text-background"></div>
+        <div class="hero-text hero-text-main">
           <h1>Jor & Ari</h1>
-          <p>Luna de Miel</p>
+        </div>
+        <div class="hero-text hero-text-bottom">
+          <p>7 de Octubre 2018</p>
         </div>
       </div>
-      <div class="album py-5">
+
+
+      <div class="album">
         <div class="container">
+          <p class="border-top text-center text-uppercase py-3 mt-5"><span class="">Lista de regalos<span></p>
 
           <div class="row">
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/01_desayuno_romantico.jpg" alt="Card image cap">
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -40,7 +45,7 @@
             </div>
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/02_alquiler_auto_a.jpg" alt="Card image cap">
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -53,7 +58,20 @@
             </div>
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/03_jungle_island_a.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/03_jungle_island_b.jpg" alt="Card image cap">
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -67,7 +85,7 @@
 
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/04_cena_romantica.jpg" alt="Card image cap">
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -80,7 +98,7 @@
             </div>
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/02_alquiler_auto_a.jpg" alt="Card image cap">
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -93,7 +111,20 @@
             </div>
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/06_crucero_b.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      Alquiler de auto
+                    </div>
+                    <small class="text-muted">$1.000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="images/06_miami_beach_a.jpg" alt="Card image cap">
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -107,7 +138,7 @@
 
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/06_miami_beach_c.jpg" alt="Card image cap">
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -120,7 +151,7 @@
             </div>
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/07_delfines.jpg" alt="Card image cap">
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -133,7 +164,7 @@
             </div>
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/01_desayuno_romantico.jpg" alt="Card image cap">
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -146,7 +177,7 @@
             </div>
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/02_alquiler_auto_a.jpg" alt="Card image cap">
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -157,32 +188,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      Alquiler de auto
-                    </div>
-                    <small class="text-muted">$1.000</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/auto.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      Alquiler de auto
-                    </div>
-                    <small class="text-muted">$1.000</small>
-                  </div>
-                </div>
-              </div>
-            </div>
+            
           </div>
         </div>
       </div>
