--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
           <div class="row">
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/01_desayuno_romantico.jpg" alt="Card image cap">
+                <div class="image-container">
+                  <img class="card-img-top" src="images/01_desayuno_romantico.jpg" alt="Card image cap">
+                  <div class="overlay">
+                    <div class="text">Regalar!</div>
+                  </div>
+                </div>
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -45,7 +50,12 @@
             </div>
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="images/02_alquiler_auto_a.jpg" alt="Card image cap">
+                <div class="image-container">
+                  <img class="card-img-top" src="images/02_alquiler_auto_a.jpg" alt="Card image cap">
+                  <div class="overlay">
+                    <div class="text">Regalar!</div>
+                  </div>
+                </div>
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -195,10 +205,35 @@
 
     </main>
 
+    <!-- Modal -->
+    <div class="modal fade" id="giftModal" tabindex="-1" role="dialog" aria-labelledby="giftModal" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Regalo</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Transferencia a cuenta XXXX
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script>
+      $('.image-container').on('click', function() {
+        $('#giftModal').modal();
+      });
+    </script>
   </body>
 </html>
