New breakfast image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="col-md-3">
               <div class="card mb-4 box-shadow">
                 <div class="image-container">
-                  <img class="card-img-top" src="images/01.jpg" alt="Card image cap">
+                  <img class="card-img-top" src="images/04.jpg" alt="Card image cap">
                   <div class="overlay">
                     <div class="text">Regalar!</div>
                   </div>
@@ -50,7 +50,8 @@
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      Desayuno para dos
+                      Desayuno romántico<br>
+                      Para dos
                     </div>
                     <small class="text-muted">$750</small>
                   </div>
@@ -254,8 +255,8 @@
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      Resort & Spa Palm Beach<br>
-                      Suite para 2
+                      Resort & Spa<br>
+                      Palm Beach
                     </div>
                     <small class="text-muted">$4.200</small>
                   </div>
@@ -370,7 +371,7 @@
                 <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      Hotel 5 estrellas en Miami<br>
+                      Hotel 5 ⭐ en Miami<br>
                       Noche para dos
                     </div>
                     <small class="text-muted">$9.000</small>
