Hide text in mobile

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <main role="main">
       <div class="hero-image">
         <div class="hero-text hero-text-background"></div>
-        <div class="hero-text hero-text-main">
+        <div class="hero-text hero-text-main hidden-sm-down">
           <h1>Jor & Ari</h1>
         </div>
-        <div class="hero-text hero-text-bottom">
+        <div class="hero-text hero-text-bottom hidden-sm-down">
           <p>7 de Octubre 2018</p>
         </div>
       </div>
