A few font changes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+	    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
 
     <title>Jor & Ari</title>
     <link rel="icon" href="favicon.ico">
@@ -36,7 +37,7 @@
 
       <div class="album">
         <div class="container">
-          <p class="border-top text-center text-uppercase py-3 mt-5"><span class="">Lista de regalos<span></p>
+          <p class="border-top text-center text-uppercase py-3 mt-5 font-weight-bold"><span style="color: #666; ">Lista de regalos<span></p>
 
           <div class="row">
             <div class="col-md-3">
