Hide text in mobile

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <body>
     <main role="main">
       <div class="hero-image">
-        <div class="hero-text hero-text-background"></div>
-        <div class="hero-text hero-text-main hidden-sm-down">
+        <div class="hero-text hero-text-background d-none d-md-block"></div>
+        <div class="hero-text hero-text-main d-none d-md-block">
           <h1>Jor & Ari</h1>
         </div>
-        <div class="hero-text hero-text-bottom hidden-sm-down">
+        <div class="hero-text hero-text-bottom d-none d-md-block">
           <p>7 de Octubre 2018</p>
         </div>
       </div>
